2008-10-26  Neal H. Walfield  <neal@gnu.org>

	* src/lyrics.h (lyrics_display): Take additional parameter
	force_download.  Update users.
	(lyrics_display_with_uri): Take additional parameters artist,
	title and force_download.  Update users.
	* src/lyrics.c (STORE_STATEMENT): Use INSERT OR REPLACE, not just
	INSERT.
	(lyrics_write_textview): Also display "No lyrics found" if CONTENT
	is the empty string.
	(lyrics_display): Take additional parameter force_download.  Pass
	it to lyrics_display_with_uri.
	(lyrics_display_with_uri): Take additional parameters artist,
	title and force_download.  Only select from the database if
	FORCE_DOWNLOAD is false.  Print nicer status messages.

2008-10-26  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (change_caption_format): Change box's child
	spacing to 0.
	(starling_run): Likewise.

2008-10-26  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (lyrics_download): New function.
	(starling_run): Create "download" button on lyrics tab.  Connect
	"clicked" signal to it.

2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (change_caption_format): Reformat dialog text.
	
2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (activated_cb): Handle the case where VIEW
	corresponds to the queue.
	(starling_run): Connect ST->QUEUE_VIEW's "row-activated" signal to
	activated_cb.

2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_play_list_query): Fix order of
	parameters.
	* src/starling.c (starling_advance): If random mode is enabled and
	the play queue is non-empty, choose a random element from the play
	queue.

2008-10-20  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Rename field scale to
	position_slider and scale_sliding to user_seeking.  Update users.
	(scale_sliding_update): Rename from this...
	(user_seeking_update): ... to this.  Update users.
	(scale_button_released_cb): Rename from this...