@@ -1,5 +1,11 @@
 2008-10-26  Neal H. Walfield  <neal@gnu.org>
 
+	* src/starling.c (starling_load): Reset ST->CURRENT_LENGTH,
+	ST->HAS_LYRICS, and ST->ENQUEUED.
+	(player_state_changed): Don't do it here.
+
+2008-10-26  Neal H. Walfield  <neal@gnu.org>
+
 	* src/lyrics.h (lyrics_display): Take additional parameter
 	force_download.  Update users.
 	(lyrics_display_with_uri): Take additional parameters artist,
